syntax = "proto3";

import "google/protobuf/empty.proto";

// Define your service and message types here

option csharp_namespace = "GrpcStreamingService";

package greet;


service ImageService {
  rpc StreamToServer(stream ImageData) returns (google.protobuf.Empty) {}
  rpc StreamToClient(google.protobuf.Empty) returns (stream ImageData) {}
}

message ImageData {
  bytes data = 1;
}